[package]
name = "roblox-packagelink-updater"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
reqwest-retry = "0.7.0"
reqwest-middleware = "0.4.2"
rustyline = "17.0.1"
anyhow = "1.0.99"
serde = { version = "1.0", features = ["derive"] }
getset = "0.1.6"
indicatif = "0.18.0"
rbx_binary = "1"
rbx_dom_weak = "3"
rbx_types = "2"
flate2 = "1.1.2"
futures = "0.3.31"
base64 = "0.22.1"
serde_json = "1.0.143"
regex = "1.11.2"
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.0", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
] }
